# codility_challenges_solutions

./: .gitignore  README.md  pyproject.toml
.code_quality/: .pylintrc  mypy.ini
lesson1/: binary_gap.py
lesson2/: README.md  odd_ocurrences.py
lesson3/: README.md  frog_jmp.py  perm_missing_elem.py  tape_equilibrium.py
lesson4/: README.md  frog_river_one.py  max_counters.py  missing_integer.py  perm_check.py
technical_challenge/: README.md  valid_hours.py
tests/lesson1/: test_binary_gap.py
tests/lesson2/: test_odd_ocurrences.py
tests/lesson3/: test_frog_jmp.py  test_perm_missing_elem.py  test_tape_equilibrium.py
tests/lesson4/: test_frog_river_one.py  test_max_counters.py  test_missing_integer.py  test_perm_check.py
tests/technical_challenge/: test_valid_hours.py
