[tool.poetry]
name = "codility-challenges-solutions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"
pytest = "^7.4.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
